--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,16 @@
+body{
+    margin: 0;
+}
 .image-section{
     height: 295px;
     background-image: url("../assets/images/illustration-sign-up-mobile.svg");
     background-size: cover;
     border-bottom-right-radius: 20px;
+}
+
+h1{
+    padding-left: 1.5rem;
+}
+ul{
+    padding-left: 1.5rem;
 }
