--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,6 @@
 }
 body{
     display: flex;
-    justify-content: center;
     align-items: center;
     height: 100vh;
     margin: 0;
@@ -34,7 +33,8 @@ body{
 
 h1{
     font-weight: 800;
-    font-size: 2.3rem;
+    font-size: 2.5rem;
+    line-height:1;
 }
 p{
     line-height: 1.5;
@@ -85,8 +85,13 @@ button{
     margin-bottom: 2rem;
     background-color: var(--darkGrey);
     color: var(--white);
+    font-size: 1rem;
     font-weight: 600;
     cursor: pointer;
+}
+
+button:hover{
+    background-color: var(--tomato);
 }
 
 span{
@@ -96,18 +101,21 @@ span{
 .subscribe{
     padding-left: 1.5rem;
 }
-
-.subscribe-heading{
-    margin-top: 4rem;
+.sub-heading{
+    margin-bottom: 4.4rem;
 }
-
-.subscribe-button{
-    display: flex;
-    flex-direction: column;
-    height: 40vh;
-    justify-content: end;
+.sub-heading h1{
+    padding-top: 1rem;
 }
-
+.sub-heading p{
+    padding-bottom: 1rem;
+    padding-right: 1.5rem;
+}
 img{
-    width:3rem;
+    width:4rem;
+}
+.subscribe button{
+    position: relative;
+    top: 9rem;
+    width: 91%;
 }
