--- a/css/style.css
+++ b/css/style.css
@@ -89,6 +89,8 @@ button{
 
 button:hover{
     background-color: var(--tomato);
+    border: none;
+    box-shadow: 0px 9px 11px var(--tomato);
 }
 
 span{
