--- a/css/style.css
+++ b/css/style.css
@@ -122,3 +122,30 @@ img{
 .secret{
     display: none;
 }
+
+@media (min-width:1400px){
+    body{
+        background-color: var(--charcoalGrey);
+    }
+    .container{
+        display: grid;
+        grid-template-rows: repeat(2, 2fr);
+        grid-template-columns: repeat(2, 2fr);
+        padding: 2rem;
+        background-color: var(--white);
+        border-radius: 10px;
+    }
+    .image-section{
+        background-image: url("../assets/images/illustration-sign-up-desktop.svg");
+        height: 500px;
+        background-repeat: no-repeat;
+        background-size: contain;
+        grid-row: 1/ 3;
+        grid-column: 2 /3;
+    }
+
+    .signup-section{
+        grid-row: 1/3;
+        grid-column: 1/2;
+    }
+}
