--- a/css/style.css
+++ b/css/style.css
@@ -125,27 +125,33 @@ img{
 
 @media (min-width:1400px){
     body{
+        justify-content: center;
         background-color: var(--charcoalGrey);
     }
     .container{
         display: grid;
-        grid-template-rows: repeat(2, 2fr);
-        grid-template-columns: repeat(2, 2fr);
+        grid-template-rows: 1fr 1fr;
+        grid-template-columns: 1fr 400px;
+        gap:50px;
         padding: 2rem;
         background-color: var(--white);
-        border-radius: 10px;
+        border-radius: 30px;
     }
     .image-section{
         background-image: url("../assets/images/illustration-sign-up-desktop.svg");
-        height: 500px;
+        height: 590px;
         background-repeat: no-repeat;
         background-size: contain;
         grid-row: 1/ 3;
-        grid-column: 2 /3;
+        grid-column: 2 / 3;
     }
 
     .signup-section{
         grid-row: 1/3;
         grid-column: 1/2;
+    }
+
+    h1{
+        font-size: 4rem;
     }
 }
