--- a/css/style.css
+++ b/css/style.css
@@ -99,6 +99,7 @@ span{
 
 .subscribe{
     padding-left: 1.5rem;
+    display: none;
 }
 .sub-heading{
     margin-bottom: 4.4rem;
@@ -129,7 +130,8 @@ img{
         background-color: var(--charcoalGrey);
     }
     .container{
-        display: grid;
+        
+        display: none;
         grid-template-rows: 1fr 1fr;
         grid-template-columns: 500px 400px;
         gap:50px;
@@ -173,5 +175,31 @@ img{
         font-size: 1.2rem;
         width: 91%;
         padding: 1.5rem;
+    }
+
+    .subscribe{
+        background-color: var(--white);
+        width: 500px;
+        height: 600px;
+        border-radius: 50px;
+        padding-left: 4rem;
+    }
+    img{
+        width: 5rem;
+        padding-top: 3rem;
+    }
+
+    .sub-heading h1{
+        padding-top: 0;
+        margin-bottom: 1.5rem;
+    }
+    .sub-heading p{
+        padding-top: 0;
+        padding-right: 4rem;
+    }
+
+    .subscribe button{
+        top:0;
+        width: 86%;
     }
 }
