--- a/css/style.css
+++ b/css/style.css
@@ -130,8 +130,7 @@ img{
         background-color: var(--charcoalGrey);
     }
     .container{
-        
-        display: none;
+        display: grid;
         grid-template-rows: 1fr 1fr;
         grid-template-columns: 500px 400px;
         gap:50px;
