--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: Roboto;
-    src: url("/assets/fonts/Roboto-Regular.ttf"),url("/assets/fonts/Roboto-Bold.ttf");
+    src: url("../assets/fonts/Roboto-Regular.ttf"),url("../assets/fonts/Roboto-Bold.ttf");
     font-weight: normal, bold;
 }
 :root{
@@ -48,7 +48,7 @@ li{
 }
 
 li::before{
-    content: url("/assets/images/icon-list.svg");
+    content: url("../assets/images/icon-list.svg");
     position: absolute;
     left: -2rem;
     top: -.9rem;
